[gd_scene load_steps=2 format=3 uid="uid://c76fu0u8dm60x"]

[ext_resource type="Script" uid="uid://d4jahtwb7rnys" path="res://views/login/login_view.gd" id="1_wcd8y"]

[node name="LoginView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wcd8y")

[node name="UserNameField" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -34.0
offset_right = 100.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Username"

[node name="PasswordField" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Password"

[node name="SubmitButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 550.0
offset_top = 403.0
offset_right = 600.0
offset_bottom = 434.0
text = "Login"
